[package]
name = "wasabi_os"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.75"
bootloader.workspace = true
cargo_toml = "0.15.3"
clap = { version = "4.3.4", features = ["derive"] }
fs-err = "2.11.0"
log.workspace = true
lzma-rs = "0.3.0"
nix = { version = "0.29.0", features = [ "term" ] }
sha2 = "0.10.8"
simple_logger = { version = "4.2.0", default-features = false, features = ["colors"]}
tar = "0.4.41"
tempfile = "3.12.0"
tokio = { version = "1.32.0", features = ["full"] }
ureq = "2.10.1"


[workspace]
members = [
    "histogram",
    "interrupt-fn-builder",
    "logger",
    "shared",
    "shared-derive",
    "staticvec",
    "testing",
    "testing/derive",
    "wasabi-kernel",
    "wasabi-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow =  "1.0.94"
bit_field = "0.10.2"
bitflags = "2.6.0"
crossbeam-epoch = { version = "0.9.18", default-features = false, features = ["alloc"] }
derive-where = "1.2.7"
hashbrown = "0.15.2"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
libm = "0.2.11"
linkme = "0.3.31"
log = "0.4.22"
noto-sans-mono-bitmap = { version = "0.3.0", features = ["unicode-latin-1-supplement", "unicode-specials"]}
paste = "1.0.12"
proc-macro2 = "1.0.92"
quote = "1.0.37"
static_assertions = "1.1"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
thiserror = { version = "2.0.4",  default-features = false }
uuid = { version = "1.11.0", default-features = false }
walkdir = "2.5"

#  TODO use upstream once new version is released
derive_builder = { version = "0.20.0", git = "https://github.com/Wasabi375/rust-derive-builder", branch = "owned_custom_default", default-features = false}

# TODO remove lazy_static as a dependency, in order to get rid of the external spin-lock
lazy_static = { version = "1.4.0", features=["spin_no_std"] }

# TODO use upstream once new version is released
# x86_64 = 0.16"
x86_64 = { version = "0.15.1", git = "https://github.com/Wasabi375/x86_64", branch = "patched" }

# TODO: why am I using my fork?
uart_16550 = { version = "0.3.0", git = "https://github.com/Wasabi375/uart_16550" }

# TODO use upstream once new version is released
# bootloader = { git = "https://github.com/Wasabi375/bootloader", rev = "bf950a4bee82764dac17b5e18f5c82f491c9799e", version = "0.11", default-features = false, features = ["uefi"] }
bootloader = { version = "0.11.8", default-features = false, features = ["uefi"] }
# bootloader = { path = "/home/burkhard/programming/forks/bootloader", default-features = false, features = ["uefi"]}
bootloader_api = { version = "0.11" }

[profile.dev]
panic = "abort"
lto = "fat"

[profile.release]
panic = "abort"
lto = "fat"
