[package]
name = "wasabi_os"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bootloader.workspace = true
cargo_toml = "0.22"
clap = { version = "4.5", features = ["derive"] }
fatfs = "0.3.6"
fs-err = "3.0.0"
gpt_builder = { version = "4.1.0", package = "gpt" }
log.workspace = true
lzma-rs = "0.3.0"
nix = { version = "0.30", features = [ "term" ] }
sha2 = "0.10.8"
simple_logger.workspace = true 
tar = "0.4.41"
tempfile = "3.12.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid.workspace = true
ureq = "3.1"

[workspace]
members = [
    "forked-libs/histogram", 
    "forked-libs/staticvec",

    "host-libs/shared",
    "host-libs/wfs",

    "libs/block-device",
    "libs/gpt",
    "libs/interrupt-fn-builder",
    "libs/logger",
    "libs/shared",
    "libs/shared/derive",

    "modules/base",
    "modules/pi-test",
    "modules/wasabi-fs",
    "modules/wasabi-fs/fuse",

    "testing",
    "testing/derive",
    "testing/test-tests",

    "builder",

    "wasabi-kernel",
    "wasabi-test",
]
default-members = ["builder"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
#libs
block-device = { path = "libs/block-device" }
gpt = { path = "libs/gpt" }
interrupt-fn-builder = { path = "libs/interrupt-fn-builder" }
logger = { path = "libs/logger" }
shared = { path = "libs/shared" }
shared-derive = { path = "libs/shared/derive" }

# modules
base = { path = "modules/base" }
wfs = { path = "modules/wasabi-fs" }

# testing libs
testing = { path = "testing" }
testing-derive = { path = "testing/derive" }
testing-tests = { path = "testing/test-tests" }

# host libs
host-shared = { path = "host-libs/shared" }
host-wfs = { path = "host-libs/wfs" }

# forked libs
histogram = { path = "forked-libs/histogram" }
staticvec = { path = "forked-libs/staticvec" }

# external deps
anyhow =  "1.0.94"
bit_field = "0.10.2"
bitflags = "2.6.0"
bootloader = {  version = "0.11.15", default-features = false, features = ["uefi"] }
congen = "0.2.1"
crc32fast = { version = "1.5.0", default-features = false }
crossbeam-epoch = { version = "0.9.18", default-features = false, features = ["alloc"] }
derive-where = "1.2.7"
hashbrown = "0.16"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
libm = "0.2.11"
linkme = "0.3.31"
log = "0.4.22"
nonmaxunsigned = { version = "2.0.0", features = [ "endian-conversion" ] }
noto-sans-mono-bitmap = { version = "0.3.0", features = ["unicode-latin-1-supplement", "unicode-specials"]}
paste = "1.0.12"
proc-macro2 = "1.0.92"
quote = "1.0.37"
ron = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
simple_logger = { version = "5.1", default-features = false, features = ["colors"]}
stabby = { version = "72.1.1", default-features = false, features = [ "alloc-rs" ] }
static_assertions = "1.1"
syn = { version = "2.0.90", features = ["full", "extra-traits"] }
thiserror = { version = "2.0.4",  default-features = false }
uuid = { version = "1.11.0", default-features = false, features = ["serde"] }
volatile = "0.6"
walkdir = "2.5"

# TODO use upstream once new version is released

bootloader_api = { version = "0.11.14", git = "https://github.com/wasabi375/bootloader", branch = "disk_image" }
const-default = { version = "1.0", features = ["derive"] }


# TODO create PR for nonmax
simple_endian = { version = "0.3.2", git = "https://github.com/Wasabi375/simple-endian-rs.git", branch = "non_zero"}

derive_builder = { version = "0.20.0", git = "https://github.com/Wasabi375/rust-derive-builder", branch = "owned_custom_default", default-features = false}

# x86_64 = 0.16"
x86_64 = { version = "0.15.1", git = "https://github.com/Wasabi375/x86_64", branch = "patched" }

# TODO: why am I using my fork?
uart_16550 = { version = "0.3.0", git = "https://github.com/Wasabi375/uart_16550" }

[profile.dev]
panic = "abort"
lto = "fat"

[profile.release]
panic = "abort"
lto = "fat"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dummy_build"]

[patch.crates-io]
tar = { path = "/home/burkhard/programming/forks/tar-rs" }
