[package]
name = "colored"
description = "The most simple way to add colors in your terminal"
version = "2.0.0"
edition = "2021"
authors = ["Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/mackwic/colored"
repository = "https://github.com/mackwic/colored"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "term-painter"]

[features]
# with this feature, no color will ever be written
no-color = []

[dependencies]
lazy_static.workspace = true
staticvec = { path = "../staticvec" }

[dev_dependencies]
 ansi_term = "0.12" # seems to be not needed, with my modifications and it is no longer maintained
rspec = "=1.0.0-beta.3"
