[package]
name = "staticvec"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
alloc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.215", features = [ "derive" ], optional = true }

