[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testing-derive = { path = "derive" }
shared = { path = "../shared" }
staticvec = { path = "../staticvec" }

x86_64.workspace = true
log.workspace = true
linkme.workspace = true
thiserror.workspace = true
