[package]
name = "wasabi-kernel"
version.workspace = true
edition.workspace = true

[features]
default = ["mem-stats"]

no-color = ["logger/no-color"]  
no-unicode-log = ["shared/no-unicode-log"]
mem-stats = [ "dep:histogram" ]
test = ["dep:testing", "shared/test"]
mem-backed-guard-page = []  


[dependencies]
histogram = { path = "../histogram", optional = true }
shared = { path = "../shared" }
shared-derive = { path = "../shared-derive" }
logger = { path = "../logger" }
staticvec = { path = "../staticvec" }
interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
testing = { path = "../testing", optional = true }

bitflags.workspace = true
bit_field.workspace = true
bootloader_api.workspace = true
derive_builder.workspace = true
iced-x86.workspace = true
linked_list_allocator = { version = "0.10.5", default-features = false }
linkme.workspace = true
log.workspace = true
noto-sans-mono-bitmap.workspace = true
paste.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
uart_16550.workspace = true
volatile = "0.4.6"
x86_64.workspace = true
hashbrown.workspace = true
derive-where.workspace = true

[build-dependencies]
walkdir.workspace = true
