[package]
name = "wasabi-kernel"
version.workspace = true
edition.workspace = true

[features]
default = []

fixed-kernel-vaddr = []
no-color = ["logger/no-color"]  
no-unicode-log = ["shared/no-unicode-log"]
mem-stats = [ "dep:histogram" ]
test = ["dep:testing"]
mem-backed-guard-page = []  
freeze-heap = ["mem-stats"]


[dependencies]
histogram = { path = "../histogram", optional = true }
interrupt-fn-builder =  { path = "../interrupt-fn-builder" }
logger = { path = "../logger" }
shared = { path = "../shared" }
shared-derive = { path = "../shared-derive" }
staticvec = { path = "../staticvec" }
testing = { path = "../testing", optional = true }

bitflags.workspace = true
bit_field.workspace = true
crossbeam-epoch.workspace = true
bootloader_api.workspace = true
derive_builder.workspace = true
linked_list_allocator = { version = "0.10.5", default-features = false }
linkme.workspace = true
log.workspace = true
noto-sans-mono-bitmap.workspace = true
paste.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
uart_16550.workspace = true
volatile = "0.4.6"
x86_64.workspace = true
hashbrown.workspace = true
derive-where.workspace = true

[build-dependencies]
walkdir.workspace = true
