[package]
name = "wasabi-test"
version.workspace = true
edition.workspace = true

[features]
fixed-kernel-vaddr = [ "wasabi-kernel/fixed-kernel-vaddr" ]
no-color = ["wasabi-kernel/no-color"]
test-tests = [ "dep:testing-tests" ]
mem-backed-guard-page = ["wasabi-kernel/mem-backed-guard-page"]
mem-stats = ["wasabi-kernel/mem-stats"]

default = ["mem-stats"]

[dependencies]
wasabi-kernel = { path = "../wasabi-kernel", features = ["test", "no-unicode-log"]}
shared.workspace = true
staticvec.workspace = true
testing.workspace = true
testing-tests = { workspace = true, optional = true }
wfs = { workspace = true, features = ["test"] }

bootloader_api.workspace = true
log.workspace = true
x86_64.workspace = true
linkme.workspace = true
itertools.workspace = true
uart_16550.workspace = true

