[package]
name = "histogram"
version = "0.11.0"
edition = "2021"
authors = ["Brian Martin <brian@pelikan.io>"]
license = "MIT OR Apache-2.0"
description = "A collection of histogram data structures"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
schemars = { version = "1.1", optional = true }
serde = { version = "1.0.144", features = ["derive"], optional = true }
thiserror.workspace = true
libm.workspace = true

[dev-dependencies]
criterion = "0.7"
rand = "0.9"

[features]
schemars = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[[bench]]
name = "histogram"
harness = false
