[package]
name = "testing-tests"
version.workspace = true
edition.workspace = true

[features]
default = ["test"]
test = []

[dependencies]
shared.workspace = true
testing.workspace = true
testing-derive.workspace = true

linkme.workspace = true
log.workspace = true

[dev-dependencies]
host-shared = { workspace = true, features = [ "test" ] }
