[package]
name = "shared-derive"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
paste.workspace = true

[lib]
proc-macro = true
