[package]
name = "fuse"
version.workspace = true
edition.workspace = true

[dependencies]
block-device.workspace = true
host-shared.workspace = true
host-wfs.workspace = true
shared.workspace = true
wfs.workspace = true

fuser = { version = "0.15.0", git = "https://github.com/Wasabi375/fuser.git" }
libc = "0.2.161"

clap = { version = "4.5", features = ["derive"] }
simple_logger.workspace = true
uuid = { workspace = true, features = ["v4"] }
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
